# PythonMeetup_Bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
apps/events/: admin.py  forms.py  models.py  tasks.py
bot/: constants.py  logging_tools.py  telegram_bot.py
bot/handlers/: donations.py  main_menu.py  networking.py  qna.py  schedule.py  speaker.py  speaker_app.py  start.py  subscriptions.py
bot/keyboards/: donations_keyboards.py  main_menu.py  networking_keyboards.py  qna_keyboards.py  schedule_keyboards.py  speaker_app_keyboards.py  subscriptions_keyboards.py
bot/services/: broadcast_service.py  core_service.py  donations_service.py  networking_service.py  payments_service.py  qna_service.py  schedule_service.py  send_message_service.py  speaker_app_service.py  speaker_service.py  subscriptions_service.py
bot/utils/: telegram_utils.py
docs/: deployment.md
pythonmeetup/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/admin/: send_direct_speaker_message.html  send_speaker_message.html
tests/: test_broadcast_service.py  test_core_service.py  test_donations.py  test_edge_cases.py  test_models.py  test_networking.py  test_payments_service.py  test_qna.py  test_qna_speaker.py  test_schedule.py  test_services.py  test_speaker.py  test_speaker_access.py  test_speaker_app.py  test_subscriptions.py  test_subscriptions_handlers.py
tests/services/: test_donations_service.py  test_networking_service.py  test_qna_service.py  test_schedule_service.py  test_speaker_app_service.py  test_subscriptions_service.py
(+10 files in other folders)
