[project]
name = "pythonmeetup-bot"
version = "0.1.0"
description = "Telegram bot and Django administration for Python meetup events."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "python-telegram-bot==22.1",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio>=1.3,<2",
    "pytest-django>=4.11,<5",
    "pytest-mock>=3.15,<4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pythonmeetup.settings"
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.uv]
package = false
