[project]
name = "pythonmeetup-bot"
version = "0.1.0"
description = "Telegram bot and Django administration for Python meetup events."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.5,<6",
    "Django==5.2.1",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.0",
    "python-telegram-bot==22.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3,<5",
    "pytest==9.1.1",
    "pytest-asyncio>=1.3,<2",
    "pytest-django>=4.11,<5",
    "pytest-mock>=3.15,<4",
    "ruff>=0.12,<1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pythonmeetup.settings_test"
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E402", "E501"]

[tool.ruff.format]
quote-style = "double"
